# Capper-Ranks

./: .env  .gitignore  README.md  capper_ranks.db  pyproject.toml  requirements.txt
.github/workflows/: main.yml
scripts/: debug_line_combining.py  install_image_processing.py  manage_cappers.py  test_dangambleai_tweet.py  test_image_processing.py  test_parlayscience_tweet.py
src/capper_ranks/: bot.py  test_api.py
src/capper_ranks.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/capper_ranks/core/: config.py  mappings.py
src/capper_ranks/database/: models.py
src/capper_ranks/services/: image_processor.py  pick_detector.py  sports_api.py  x_client.py
tests/: test_image_processor.py  test_pick_detector.py
