# pyproject.toml

# This section tells pip what tools are needed to build your project.
# You can usually leave this part as is.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# This section contains all the metadata about your project.
[project]
name = "capper_ranks"
version = "0.1.0"
description = "A Twitter bot to track and rank sports capper picks."
readme = "README.md"
requires-python = ">=3.9"
# Dependencies can also be listed here, but for now we will keep using requirements.txt

# This section is the key to solving your 'src' layout import error.
[tool.setuptools.packages.find]
where = ["src"]  # Tells setuptools to look for packages inside the 'src' directory